--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/icedata?serverTimezone=Europe/Kiev
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=username
+spring.datasource.password=password
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
