--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/icedata?serverTimezone=Europe/
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=username
 spring.datasource.password=password
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+
