--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/icedata?serverTimezone=Europe/Kiev
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/icedata?serverTimezone=Europe/Kiev&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=username
 spring.datasource.password=password
